--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+boto3==1.11.6
+botocore==1.14.6
 chardet==3.0.4
+docutils==0.15.2
 idna==2.8
+jmespath==0.9.4
+python-dateutil==2.8.1
 requests==2.22.0
+s3transfer==0.3.1
 six==1.14.0
 tenacity==6.0.0
 urllib3==1.25.7
